# PySOMVis

./: .gitignore  README.md  setup.cfg  setup.py
PySOMVis/: coding_assignment.ipynb  display_som.py  pysomvis.py  train_and_display_satimage.py
examples/: coding_assignment.ipynb
pysomvis/: SOMToolBox_Parse.py  __init__.py  pysomvis.py
pysomvis/controls/: __init__.py  controllers.py
pysomvis/datasets/satimage/: satimage.csv
pysomvis/mnemonics/: mnemonicSOM.py
pysomvis/visualizations/: __init__.py  activityhist.py  chessboard.py  cluster_connection.py  clustering.py  complane.py  dmatrix.py  graph.py  hithistogram.py  intrinsic_distance.py  metromap.py  minimumSpanningTree.py  neighbourhood_graph.py  piechart.py  qerror.py  sdh.py  sky_metaphor.py  somstreamvis.py  topographic_error.py  umatrix.py  upmatrix.py
